--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
                 {% endif %}
                 </li>
                 {% if site.email %}
-                <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+                <li><a href="mailto:efim@losev.us">efim@losev.us</a></li>
                 {% endif %}
                 {% if site.github_username %}
                 <li>
